fix: Edit skill-container items alignment

--- a/001-web-portfolio/css/style.css
+++ b/001-web-portfolio/css/style.css
@@ -172,7 +172,7 @@ button > img {
   flex-wrap: wrap;
   padding: 10px;
   justify-content: center;
-  align-items: baseline;
+  align-items: center;
   gap: 30px;
   text-align: center;
 }
